--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -40,6 +40,21 @@ jobs:
           ruby-version: '3.3' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+
+      # 👇就在这里插入这两步
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install system packages (ImageMagick) & Jupyter
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+          python -m pip install --upgrade pip
+          pip install "jupyter>=1.0.0" "nbconvert>=7.0.0"
+      # 👆插完后，下面接原来的 Setup Pages
+      
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
