--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@ first_name: Weijing
 middle_name: 
 last_name: Wang
 contact_note: >
-  Linkedin
+  [LinkedIn](https://www.linkedin.com/in/weijing-wang-41469524a)
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Personal site with CV, blog, and projects.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+  
+keywords: urban analytics, landscape perception, causal inference, AI in cities, well-being of the city # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: assets/img/avatar.png # ⚛️ the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: avatar.png # ⚛️ the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://weijing-wang.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
