--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ keywords: urban analytics, landscape perception, causal inference, AI in cities,
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: avatar.png # ⚛️ the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://weijing-wang.github.io # the base hostname & protocol for your site
+url: https://weijing-wang.github.io_io-archive # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
